fixed scrollspy flickering

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -194,12 +194,14 @@ body, html {
         display: block;
       }
       a {
-        padding: 30px 15px;
+        padding: 3px 0px;
         display: inline-block;
+        margin: 30px 15px;
       }
       &.active a {
         background: none;
-        color: #428bca;
+        color: #555;
+        border-bottom: 1px solid #555;
         &:hover {
           background: none;
           color: #428bca;
@@ -234,6 +236,10 @@ body, html {
   }
   &.affix-top {
     position: relative;
+    & li.active:first-child a {
+      color: #555;
+      border: none;
+    }
   }
   &.affix {
     @include box-shadow(0px 1px 2px 0px rgba(0, 0, 0, 0.10));
@@ -284,7 +290,7 @@ Hero
   transform: translate(-50%, -50%);
 }
 
-.lteie8 {
+.lte8 {
   img.ri {
     position: absolute;
     max-width: 80%;
